--- a/main.tex
+++ b/main.tex
@@ -54,8 +54,12 @@ For the preparation of image processing first each individual image that needs t
 
 A separate Python module was made to process individual images of letters and to prepare them to be read by the computer vision system. This was applied iteratively to the results of the line reading function. From here, I took the characters and blurred the images using a Gaussian blur which smoothed the colors into transitions between black and white rather than just the two colors while also blurring out some background noise to produce a smoother overall picture. From here, a threshold was set that converted all pixels with a color greater than 100 on a 100 to 255 scale to black. Next, black pixels are converted to white and white pixels are converted to black to make the image white text on a black background. The images were converted into perfects squares by adding extra rows and columns to each side until the width and length were equal. This ensured that when the size of the images was decreased, the images would not be heavily compressed or altered. The images were then converted to 128 by 128 resulting in no apparent warping in any of my tests. Next, the images were iterated over to identify the highest, lowest, furthest left, and furthest right pixels. The image was reduced to just these pixels with two pixel padding before being padded back into a square before being further reduced once more into a 28 by 28-pixel square. To finish the image processing, I mirrored each individual image and rotated it 90 degrees to match the image orientation provided by the EMNIST in their data set. The motivations behind the orientation of these images remains unclear. The computer vision system from here assigned the appropriate labels to the images. The labels are returned in order from the left to right side of the original image to give the final text output. 
 
+The MCP elements of this project were developed by allowing an MCP client to connect to each computer vision system exported as a MCP server or tool. The client registers each individual computer vision system as a tool accessible for the MCP client allowing AI to fluidly interact with each computer vision system. The image processing is built in as a function call within the running of the system, ensuring that the program runs effectively. The LLM when prompted with an image file identifies which tool is best to interact with the image if any and sends a tool call in the form of a JSON file containing the name of the tool and its parameters. If it is correct in its assumptions, a text file is returned containing all of the words transcribed by the MCP system.
 
-For each computer vision system within the database, I will describe how the required system was developed.
+To interact with this system, I built a basic Tkinter Graphical User Interface. The basic GUI contains two text boxes, one for the user to input the meta data for the image that they are adding and another for the LLM to return its transcription of the image. On the right side, there is a large drop box for images. It does not show the image input, but it does receive the files using another package tkinkterdnd2 which allows users to drag and drop images. The system stores the data input by the user and feeds it to the LLM’s prompt allowing for the function calls necessary to be determined by the system.
+
+For each computer vision system within the database, I will describe how the required system was developed. I will also be able to more thoroughly and accurately describe the MCP once it actually does something.
+
 \section{Results}
 
 For the results section, I will show a graph of the loss of each computer vision system as I progressed. This will be shown for earlier renditions of the system as well as the final chosen system. It will be used to demonstrate the accuracy of the system. 
