--- a/main.tex
+++ b/main.tex
@@ -50,25 +50,33 @@ From here, another system was created starting by filtering over the input layer
 A fourth and final model was created using the same convolutional and pooling layers as Model3, but with different fully connected layers. This model used 6 separate fully connected layers to link the neurons to the feature map. The first linked the 3200 outputs to 1600 neurons, then 1600 to 800, then 800 to 410, then 410 to 208, then 208 to 104, and finally 104 to 26. This resulted in an accuracy of 89\% or 90\%. This shows that the fundamental issue is likely the amount of training data input into our system. Because Model3 was the optimal system, it was the system that was exported to the MCP server.
 I broke the full EMNIST into training and testing sets using its own built in attributes. This will be explained further in future drafts.
 
-For the preparation of image processing first each individual image that needs to be read by the system needed to be identified and separated from the larger image of text input. To do this, the first attempt sought to isolate each individual image of a letter by identifying isolated blobs of white pixels within the image of text. The program would identify a pixel and try to iterate through the surrounding pixels to identify if they were also part of the letter. This, however, proved ineffective for a few reasons. First of all, the system picked up noise in the background, such as smudges on paper, and tried to label it as letters. However, that could be prevented by applying a Gaussian blur that smoothed the image before black and white thresholding converted the image to two colors. The real issue appeared with the letters “i” and “j.” The dots on these letters were identified as separate letters by this method making it impossible to properly isolate the full “i” and it created an extra letter in the output. I could not just look for nearby images because often the dots of “i’s” were significantly separated from the body of the letter. Because of the flaws with this method, a separate program was prepared to read the complex. The program starts by converting the initial image into gray scale then using Opencv’s threshold function to convert the image to black and white. From here a black background was created for the image and any pixel that is not absolutely black was made white by iterating through the image. Next, I iterate through each column. If there is a pixel in that column it is marked and when there are no longer any pixels that is marked as well. These sets of two columns are used to crop each separate each image from the original picture, not the grayed version. The resulting images tend to have unusual proportions and a tall height.
+Loss is the indicator of a systems assumption of the correct character. It is derived from the system’s perceived percentage likelihood that a given image may be a given character. As the system is trained, the loss changes with each image it processes. Ideally, loss should be 0 indicating that the system is operating with 100\% certainty that the image input is a specific character. Model3’s loss is seen below
 
-A separate Python module was made to process individual images of letters and to prepare them to be read by the computer vision system. This was applied iteratively to the results of the line reading function. From here, I took the characters and blurred the images using a Gaussian blur which smoothed the colors into transitions between black and white rather than just the two colors while also blurring out some background noise to produce a smoother overall picture. From here, a threshold was set that converted all pixels with a color greater than 100 on a 100 to 255 scale to black. Next, black pixels are converted to white and white pixels are converted to black to make the image white text on a black background. The images were converted into perfects squares by adding extra rows and columns to each side until the width and length were equal. This ensured that when the size of the images was decreased, the images would not be heavily compressed or altered. The images were then converted to 128 by 128 resulting in no apparent warping in any of my tests. Next, the images were iterated over to identify the highest, lowest, furthest left, and furthest right pixels. The image was reduced to just these pixels with two pixel padding before being padded back into a square before being further reduced once more into a 28 by 28-pixel square. To finish the image processing, I mirrored each individual image and rotated it 90 degrees to match the image orientation provided by the EMNIST in their data set. The motivations behind the orientation of these images remains unclear. The computer vision system from here assigned the appropriate labels to the images. The labels are returned in order from the left to right side of the original image to give the final text output. 
+There will be a graph for the loss of Model3 here, but This proves difficult to construct as there are so many data points. I will actually alter the program to get averages over a wider area before making this graph.
+
+As the graph indicates, in the first several hundred images processed, loss decreased drastically indicating rapid development by the system. However, in the final hundreds of images loss fluctuated around 0.3 and does not as consistently decrease. This indicates that the system may require substantially more training data to improve its accuracy further.
+
+For the preparation of images, processing first needs to be applied to each individual letter that needs to be read by the system to separate each of them from the larger image of text input. To do this, the first program sought to separate each individual image of a letter by identifying isolated blobs of white pixels within the image of text. The program would identify a pixel and try to iterate through the surrounding pixels to identify if they were also part of the letter. This, however, proved ineffective for a few reasons. First of all, the system picked up noise in the background, such as smudges on paper, and tried to label it as letters. However, that could be prevented by applying a Gaussian blur that smoothed the image before black and white thresholding converted the image to two colors. The real issue appeared with the letters “i” and “j.” The dots on these letters were identified as separate letters by this method making it impossible to properly isolate the full “i” and it created an extra letter in the output. I could not just look for nearby images because often the dots of “i’s” were significantly separated from the body of the letter. 
+
+Because of the flaws with this method, a separate program was prepared to read the complex. The program starts by converting the initial image into gray scale then using Opencv’s threshold function to convert the image to black and white. From here a black background was created for the image and any pixel that is not absolutely black was made white by iterating through the image. From here the image is iterated through by row to separate each horizontal line of text, which are stored as separate PNG files. Next, each PNG of a line of text is iterated through by each column of pixels. If there is a pixel in that column it is marked and when there are no longer any pixels that is marked as well. These sets of two columns are used to crop each separate each image from the original picture, not the grayed version. The resulting images tend to have unusual proportions and a tall height.
+
+A separate Python module was made to process individual images of letters and to prepare them to be read by the computer vision system. This was applied iteratively to the results of the line reading function. From here, I took the characters and blurred the images using a Gaussian blur which smoothed the colors into transitions between black and white rather than just the two colors while also blurring out some background noise to produce a smoother overall picture. From here, a threshold was set that converted all pixels with a color greater than 100 on a 100 to 255 scale to black. Next, black pixels are converted to white and white pixels are converted to black to make the image white text on a black background. The images were converted into perfects squares by adding extra rows and columns to each side until the width and length were equal. This ensured that when the size of the images was decreased, the images would not be heavily compressed or altered. The images were then converted to 128 by 128 resulting in no apparent warping in any of my tests. Next, the images were iterated over to identify the highest, lowest, furthest left, and furthest right pixels. The image was reduced to just these pixels with two pixel padding before being padded back into a square before being further reduced once more into a 28 by 28-pixel square. To finish the image processing, I mirrored each individual image and rotated it 90 degrees to match the image orientation provided by the EMNIST in their data set. The motivation behind the orientation of these images remains unclear. The computer vision system from here assigned the appropriate labels to the images. The labels are returned in order from the left to right side of the original image to give the final text output. 
 
 The MCP elements of this project were developed by allowing an MCP client to connect to each computer vision system exported as a MCP server or tool. The client registers each individual computer vision system as a tool accessible for the MCP client allowing AI to fluidly interact with each computer vision system. The image processing is built in as a function call within the running of the system, ensuring that the program runs effectively. The LLM when prompted with an image file identifies which tool is best to interact with the image if any and sends a tool call in the form of a JSON file containing the name of the tool and its parameters. If it is correct in its assumptions, a text file is returned containing all of the words transcribed by the MCP system.
 
 To interact with this system, I built a basic Tkinter Graphical User Interface. The basic GUI contains two text boxes, one for the user to input the meta data for the image that they are adding and another for the LLM to return its transcription of the image. On the right side, there is a large drop box for images. It does not show the image input, but it does receive the files using another package tkinkterdnd2 which allows users to drag and drop images. The system stores the data input by the user and feeds it to the LLM’s prompt allowing for the function calls necessary to be determined by the system.
 
-For each computer vision system within the database, I will describe how the required system was developed. I will also be able to more thoroughly and accurately describe the MCP once it actually does something.
+gFor each computer vision system within the database, I will describe how the required system was developed. I will also be able to more thoroughly and accurately describe the MCP once it actually does something.
 
 \section{Results}
 
-For the results section, I will show a graph of the loss of each computer vision system as I progressed. This will be shown for earlier renditions of the system as well as the final chosen system. It will be used to demonstrate the accuracy of the system. 
+For the results section, I will show a graph of the loss of each computer vision system as I progressed. This will be shown for earlier renditions of the system as well as the final chosen system. It will be used to demonstrate the accuracy of the system. I have not done this yet because I believe that I will still attain a lower loss from the system
 
-I will also show examples of lines of text and the output on the user interface.
+I will also show examples of lines of text and the output on the user interface. This unfortunately does not exist yet.
 
-Charts show how many incorrectly identified characters were given in example texts by each of the systems
+As was previously shown in the example with figure1, the handwritten name input into the system, errors in transcription are frequent and often very obvious. Additionally, spaces may not be detected by the system. Among x attempts in running our convolutional neural network Model3 on Figure1, an average of y characters were seen incorrectly transcribed. This reflects the system’s overall accuracy but also shows that the system is far from perfect. Generally
 
-The next section of the results will show how different text styles were successfully identified by the Model Context Protocol.
+The next section of the results will show how different text styles were successfully identified by the Model Context Protocol. This also does not exist yet but I will force the MCP to return the name of the system that it used. 
 
 \section{Conclusion}
 In conclusion, this project demonstrates the potential of integrating multiple specialized computer vision systems into a single, adaptive AI framework for handwriting recognition. By redirecting input images to the most suitable model, the system effectively overcomes the limitations of single computer vision system strategies. This design not only enhances accuracy across diverse handwriting styles but also provides a foundation for expansion as new models are developed. The result is a flexible, scalable, and intelligent handwriting recognition system capable of evolving with future as more computer vision systems are added to it.
