Corrected unintentional presence of the letter g

--- a/main.tex
+++ b/main.tex
@@ -66,7 +66,7 @@ The MCP elements of this project were developed by allowing an MCP client to con
 
 To interact with this system, I built a basic Tkinter Graphical User Interface. The basic GUI contains two text boxes, one for the user to input the meta data for the image that they are adding and another for the LLM to return its transcription of the image. On the right side, there is a large drop box for images. It does not show the image input, but it does receive the files using another package tkinkterdnd2 which allows users to drag and drop images. The system stores the data input by the user and feeds it to the LLM’s prompt allowing for the function calls necessary to be determined by the system.
 
-gFor each computer vision system within the database, I will describe how the required system was developed. I will also be able to more thoroughly and accurately describe the MCP once it actually does something.
+For each computer vision system within the database, I will describe how the required system was developed. I will also be able to more thoroughly and accurately describe the MCP once it actually does something.
 
 \section{Results}
 
