--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
 \usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
 \usepackage{graphicx}
 \title{\textbf{Project Topic}}
-\author{Your Name}
+\author{Miles Fike}
 
 \begin{document}
 
